<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/trackTextView"
        android:layout_width="54dp"
        android:layout_height="34dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="40dp"
        android:text="@string/track_details"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/track"
        android:layout_width="135dp"
        android:layout_height="47dp"
        android:layout_marginTop="40dp"
        android:text="@string/track"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/trackTextView"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/priceTextView"
        android:layout_width="54dp"
        android:layout_height="34dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="40dp"
        android:text="@string/priceTextView_details"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/track"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/price"
        android:layout_width="135dp"
        android:layout_height="45dp"
        android:layout_marginTop="40dp"
        android:text="@string/price"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/artistTextView"
        android:layout_width="54dp"
        android:layout_height="34dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:text="@string/artist_details"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/trackTextView" />

    <TextView
        android:id="@+id/artist"
        android:layout_width="135dp"
        android:layout_height="45dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/artist"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/artistTextView"
        app:layout_constraintTop_toBottomOf="@+id/track" />

    <TextView
        android:id="@+id/dateTextView"
        android:layout_width="54dp"
        android:layout_height="34dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:text="@string/datetextView"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/artist"
        app:layout_constraintTop_toBottomOf="@+id/priceTextView" />

    <TextView
        android:id="@+id/date"
        android:layout_width="135dp"
        android:layout_height="42dp"
        android:layout_marginTop="8dp"
        android:maxLength="10"
        android:text="@string/date"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/price" />
</android.support.constraint.ConstraintLayout>
    <!--
      Assignment : HomeWork 03
      File Name : Group15_HW03.zip
      Full Names : Manideep Reddy Nukala, Sai Charan Reddy Vallapureddy
      -->